# SAT

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.c  main.h  object.c  object.h  sat.c  sat.h  shape.c  shape.h
